--- a/.github/workflows/cache-branch.yml
+++ b/.github/workflows/cache-branch.yml
@@ -82,24 +82,26 @@ jobs:
           echo "Reading branch info from JSON file..."
           branch_info=$(jq -r '."${{ env.asc_branch_key }}"' ${{ env.BRANCH_JSON }})
           echo "Raw branch_info: $branch_info"
-#          if [ "$branch_info" = "null" ]; then
-#            echo "branch_name=''" >> $GITHUB_OUTPUT
-#            echo 'not find branch_info'
-#            echo "generate=1" >> $GITHUB_ENV
-#          else
-#            branch_name=$(echo "$branch_info" | jq -r '.branch_name')
-#            echo "branch_name=${branch_name}" >> $GITHUB_OUTPUT
-#            echo "find branch_info $branch_info $branch_name"
-#            echo "Checking for branch: $branch_name"
-#            jq --arg currnent "$branch_name" '.current_branch = $currnent' ${{ env.BRANCH_JSON }} > temp.json
-#            time=$(date +%Y-%m-%d\ %H:%M:%S)
-#            jq --arg time "$time" '.time = $time'  temp.json  > temp1.json && mv temp1.json ${{ env.BRANCH_JSON }}
-#            git status
-#            git commit -a -m "Tmp Branch $branch_name"
-#            git push
-#            echo "generate=1" >> $GITHUB_ENV
-#          fi
-#          echo "$branch_name"
+          if [ "$branch_info" = "null" ]; then
+            echo "branch_name=''" >> $GITHUB_OUTPUT
+            echo 'not find branch_info'
+            echo "generate=1" >> $GITHUB_ENV
+          else
+            branch_name=$(echo "$branch_info" | jq -r '.branch_name')
+            echo "branch_name=${branch_name}" >> $GITHUB_OUTPUT
+            echo "find branch_info $branch_info $branch_name"
+            echo "Checking for branch: $branch_name"
+            had_branch=$(git branch -r | grep "aaa")
+            echo "branch=$had_branch"
+            jq --arg currnent "$branch_name" '.current_branch = $currnent' ${{ env.BRANCH_JSON }} > temp.json
+            time=$(date +%Y-%m-%d\ %H:%M:%S)
+            jq --arg time "$time" '.time = $time'  temp.json  > temp1.json && mv temp1.json ${{ env.BRANCH_JSON }}
+            git status
+            git commit -a -m "Tmp Branch $branch_name"
+            git push
+            echo "generate=1" >> $GITHUB_ENV
+          fi
+          echo "$branch_name"
 
       - name: Generate temporary branch name
         id: generate-branch-name
