--- a/.github/workflows/cache-branch.yml
+++ b/.github/workflows/cache-branch.yml
@@ -88,7 +88,7 @@ jobs:
             echo "branch_name=${branch_name}" >> $GITHUB_OUTPUT
             echo "find branch_info $branch_info $branch_name"
             echo "Checking for branch: $branch_name"
-            had_branch=$(git branch -r | grep "aaa")
+            had_branch=$(git branch -r | grep "${{branch_name}}")
             echo "branch=$had_branch"
             if [ -z "$had_branch" ]; then
               echo "分支 $branch_name 不存在"
