--- a/.github/workflows/cache-branch.yml
+++ b/.github/workflows/cache-branch.yml
@@ -74,8 +74,9 @@ jobs:
             echo "branch_name=${branch_name}" >> $GITHUB_ENV
             echo "find branch_info $branch_info $branch_name"
             echo "Checking for branch: $branch_name"
+            git branch -r | grep "${{env.branch_name}}"
             had_branch=$(git branch -r | grep "${{env.branch_name}}")
-            echo "branch=$had_branch"
+            echo "had_branch=$had_branch"
             if [ -z "$had_branch" ]; then
               echo "分支 $branch_name 不存在"
             else
