--- a/.github/workflows/cache-branch.yml
+++ b/.github/workflows/cache-branch.yml
@@ -74,9 +74,11 @@ jobs:
             echo "branch_name=${branch_name}" >> $GITHUB_ENV
             echo "find branch_info $branch_info $branch_name"
             echo "Checking for branch: $branch_name"
-            had_branch=$(git branch -r | grep -w "origin/${{env.branch_name}}")
-            echo "had_branch=$had_branch"
-            if [ -z "$had_branch" ]; then
+            had_branch=$(git branch -r | grep "${{env.branch_name}}")
+#            had_branch= $had_branch | grep -w "origin/${{env.branch_name}}"
+#            echo "had_branch=$had_branch"
+            if [[ $had_branch =~ $branch_name ]]; then
+
               echo "分支 $branch_name 不存在"
             else
               echo "分支 $branch_name 存在"
