--- a/.github/workflows/cache-branch.yml
+++ b/.github/workflows/cache-branch.yml
@@ -77,12 +77,12 @@ jobs:
             had_branch=$(git branch -r | grep "${{env.branch_name}}")
 #            had_branch= $had_branch | grep -w "origin/${{env.branch_name}}"
             echo "$had_branch" | grep -q "$branch_name"
-            echo "had_branch=$had_branch"
-            if [ "$had_branch" = "" ]; then
-              echo "分支 $branch_name 不存在"
-            else
-              echo "分支 $branch_name 存在"
-            fi
+#            echo "had_branch=$had_branch"
+#            if [ "$had_branch" = "" ]; then
+#              echo "分支 $branch_name 不存在"
+#            else
+#              echo "分支 $branch_name 存在"
+#            fi
             if [ "$had_branch" = "" ]; then
               echo "generate=1" >> $GITHUB_ENV
             else
