--- a/.github/workflows/cache-branch.yml
+++ b/.github/workflows/cache-branch.yml
@@ -56,47 +56,38 @@ jobs:
           done
           sorted_branches=($(printf "%s\n" "${unique_branch_array[@]}" | sort))
           asc_branch_key=$(IFS=_; echo "${sorted_branches[*]}")
-#          echo "asc_branch_key=${asc_branch_key}" >> $GITHUB_ENV
-#          echo "asc_branch_key=${asc_branch_key}"
+          echo "asc_branch_key=${asc_branch_key}" >> $GITHUB_ENV
+          echo "asc_branch_key=${asc_branch_key}"
 
-      - name: Read Cache Branch
-        if: inputs.branches != ''
-        id: read-cache
-        run: |
-          echo "Reading branch info from JSON file..."
-          branch_info=$(jq -r '."${{ env.asc_branch_key }}"' ${{ env.BRANCH_JSON }})
-          echo "Raw branch_info: $branch_info"
-          if [ "$branch_info" = "null" ]; then
-            echo 'not find branch_info'
-            echo "generate=1" >> $GITHUB_ENV
-          else
-            branch_name=$(echo "$branch_info" | jq -r '.branch_name')
-            echo "branch_name=${branch_name}" >> $GITHUB_ENV
-            echo "find branch_info $branch_info $branch_name"
-            echo "Checking for branch: $branch_name"
-            had_branch=$(git branch -r | grep "${{env.branch_name}}")
-#            had_branch= $had_branch | grep -w "origin/${{env.branch_name}}"
-            echo "$had_branch" | grep -q "$branch_name"
-#            echo "had_branch=$had_branch"
+#      - name: Read Cache Branch
+#        if: inputs.branches != ''
+#        run: |
+#          echo "Reading branch info from JSON file..."
+#          branch_info=$(jq -r '."${{ env.asc_branch_key }}"' ${{ env.BRANCH_JSON }})
+#          echo "Raw branch_info: $branch_info"
+#          if [ "$branch_info" = "null" ]; then
+#            echo 'not find branch_info'
+#            echo "generate=1" >> $GITHUB_ENV
+#          else
+#            branch_name=$(echo "$branch_info" | jq -r '.branch_name')
+#            echo "branch_name=${branch_name}" >> $GITHUB_ENV
+#            echo "find branch_info $branch_info $branch_name"
+#            echo "Checking for branch: $branch_name"
+#            had_branch=$(git branch -r | grep "${{env.branch_name}}")
+#            echo "$had_branch" | grep -q "$branch_name"
 #            if [ "$had_branch" = "" ]; then
-#              echo "分支 $branch_name 不存在"
+#              echo "generate=1" >> $GITHUB_ENV
 #            else
-#              echo "分支 $branch_name 存在"
+#              jq --arg currnent "$branch_name" '.current_branch = $currnent' ${{ env.BRANCH_JSON }} > temp.json
+#              time=$(date +%Y-%m-%d\ %H:%M:%S)
+#              jq --arg time "$time" '.time = $time'  temp.json  > temp1.json && mv temp1.json ${{ env.BRANCH_JSON }}
+#              git status
+#              git commit -a -m "Tmp Branch $branch_name"
+#              git push
+#              echo "generate=" >> $GITHUB_ENV
 #            fi
-            if [ "$had_branch" = "" ]; then
-              echo "generate=1" >> $GITHUB_ENV
-            else
-              jq --arg currnent "$branch_name" '.current_branch = $currnent' ${{ env.BRANCH_JSON }} > temp.json
-              time=$(date +%Y-%m-%d\ %H:%M:%S)
-              jq --arg time "$time" '.time = $time'  temp.json  > temp1.json && mv temp1.json ${{ env.BRANCH_JSON }}
-              git status
-              git commit -a -m "Tmp Branch $branch_name"
-              git push
-              echo "generate=" >> $GITHUB_ENV
-            fi
-            
-          fi
-          echo "$branch_name"
+#          fi
+#          echo "$branch_name"
 
       - name: Generate temporary branch name
         if: ${{ env.generate != '' }}
