--- a/.github/workflows/cache-branch.yml
+++ b/.github/workflows/cache-branch.yml
@@ -74,7 +74,8 @@ jobs:
             echo "find branch_info $branch_info $branch_name"
             echo "Checking for branch: $branch_name"
             had_branch=$(git branch -r | grep "${{env.branch_name}}")
-#            echo "$had_branch" | grep -q "$branch_name"
+            res=$($had_branch" | grep -q "$branch_name)
+            echo "res=$res"
             if echo "$had_branch" | grep -qF "$branch_name"; then
               echo "had_branch 包含分支 $branch_name"
             else
