--- a/.github/workflows/cache-branch.yml
+++ b/.github/workflows/cache-branch.yml
@@ -76,13 +76,13 @@ jobs:
             had_branch=$(git branch -r | grep "${{env.branch_name}}")
             echo="had_branch=$had_branch"
 #            res=$($had_branch" | grep -q "$branch_name)
-            if [[ "$had_branch" == *"${{env.branch_name}}"* ]]; then
-               echo "包含：had_branch"
-            else
-               echo "不包含：had_branch"
-            fi
-            res=$(echo "$had_branch" | grep "$branch_name")
-            echo "res=$res"
+#            if [[ "$had_branch" == *"${{env.branch_name}}"* ]]; then
+#               echo "包含：had_branch"
+#            else
+#               echo "不包含：had_branch"
+#            fi
+#            res=$(echo "$had_branch" | grep "$branch_name")
+#            echo "res=$res"
             if [ "$had_branch" = "" ]; then
               echo "generate=1" >> $GITHUB_ENV
             else
