--- a/.github/workflows/cache-branch.yml
+++ b/.github/workflows/cache-branch.yml
@@ -83,17 +83,17 @@ jobs:
 #            fi
 #            res=$(echo "$had_branch" | grep "$branch_name")
 #            echo "res=$res"
-            if [ "$had_branch" = "" ]; then
-              echo "generate=1" >> $GITHUB_ENV
-            else
-              jq --arg currnent "$branch_name" '.current_branch = $currnent' ${{ env.BRANCH_JSON }} > temp.json
-              time=$(date +%Y-%m-%d\ %H:%M:%S)
-              jq --arg time "$time" '.time = $time'  temp.json  > temp1.json && mv temp1.json ${{ env.BRANCH_JSON }}
-              git status
-              git commit -a -m "Tmp Branch $branch_name"
-              git push
-              echo "generate=" >> $GITHUB_ENV
-            fi
+#            if [ "$had_branch" = "" ]; then
+#              echo "generate=1" >> $GITHUB_ENV
+#            else
+#              jq --arg currnent "$branch_name" '.current_branch = $currnent' ${{ env.BRANCH_JSON }} > temp.json
+#              time=$(date +%Y-%m-%d\ %H:%M:%S)
+#              jq --arg time "$time" '.time = $time'  temp.json  > temp1.json && mv temp1.json ${{ env.BRANCH_JSON }}
+#              git status
+#              git commit -a -m "Tmp Branch $branch_name"
+#              git push
+#              echo "generate=" >> $GITHUB_ENV
+#            fi
           fi
           echo "$branch_name"
 
