--- a/.github/workflows/cache-branch.yml
+++ b/.github/workflows/cache-branch.yml
@@ -71,10 +71,11 @@ jobs:
           else
             branch_name=$(echo "$branch_info" | jq -r '.branch_name')
             echo "branch_name=${branch_name}" >> $GITHUB_ENV
-            echo "find branch_info $branch_info $branch_name"
+            echo "find branch_name=$branch_name"
             echo "Checking for branch: $branch_name"
             had_branch=$(git branch -r | grep "${{env.branch_name}}")
             echo="had_branch=$had_branch"
+
           fi
 
       - name: Generate temporary branch name
