--- a/.github/workflows/cache-branch.yml
+++ b/.github/workflows/cache-branch.yml
@@ -74,7 +74,7 @@ jobs:
             echo "find branch_name=$branch_name"
             echo "Checking for branch: $branch_name"
             had_branch=$(git branch -r | grep "${{env.branch_name}}")
-            echo="had_branch=$had_branch"
+            echo "had_branch=$had_branch"
 
           fi
 
