--- a/.github/workflows/cache-branch.yml
+++ b/.github/workflows/cache-branch.yml
@@ -75,7 +75,7 @@ jobs:
             echo "Checking for branch: $branch_name"
             had_branch=$(git branch -r | grep "${{env.branch_name}}")
             echo "had_branch=$had_branch"
-            res=$("$had_branch" | grep -q "$branch_name)
+            res=$("$had_branch" | grep -q "$branch_name")
             echo "res=$res"
           fi
 
