--- a/.github/workflows/cache-branch.yml
+++ b/.github/workflows/cache-branch.yml
@@ -75,8 +75,11 @@ jobs:
             echo "Checking for branch: $branch_name"
             had_branch=$(git branch -r | grep "${{env.branch_name}}")
             echo "had_branch=$had_branch"
-            res=$("$had_branch" | grep -q "$branch_name")
-            echo "res=$res"
+            if [[ "$had_branch" == *"${{env.branch_name}}"* ]]; then
+              echo "包含：had_branch"
+            else
+              echo "不包含：had_branch"
+            fi
           fi
 
       - name: Generate temporary branch name
