--- a/.github/workflows/cache-branch.yml
+++ b/.github/workflows/cache-branch.yml
@@ -73,19 +73,19 @@ jobs:
             echo "branch_name=${branch_name}" >> $GITHUB_ENV
             echo "find branch_name=$branch_name"
             echo "Checking for branch: $branch_name"
-            had_branch=$(git branch -r | grep "${{env.branch_name}}")
+            had_branch=$(git branch -r | grep "$branch_name")
             echo "had_branch=$had_branch"
-            if [[ "$had_branch" == *"${{env.branch_name}}"* ]]; then
+            if [[ "$had_branch" == *"$branch_name"* ]]; then
               jq --arg currnent "$branch_name" '.current_branch = $currnent' ${{ env.BRANCH_JSON }} > temp.json
               time=$(date +%Y-%m-%d\ %H:%M:%S)
               jq --arg time "$time" '.time = $time'  temp.json  > temp1.json && mv temp1.json ${{ env.BRANCH_JSON }}
               git commit -a -m "Tmp Branch $branch_name"
               git push
-              echo "exist:${{env.branch_name}}, generate=exist"
+              echo "exist:$branch_name}, generate=exist"
               echo "generate=exist" >> $GITHUB_ENV
             else
               echo "generate=needbranch" >> $GITHUB_ENV
-              echo "exist:${{env.branch_name}}, generate=needbranch"
+              echo "exist:$branch_name}, generate=needbranch"
             fi
           fi
 
