--- a/.github/workflows/cache-branch.yml
+++ b/.github/workflows/cache-branch.yml
@@ -72,8 +72,8 @@ jobs:
             branch_name=$(echo "$branch_info" | jq -r '.branch_name')
             echo "branch_name=${branch_name}" >> $GITHUB_ENV
             echo "find branch_name=$branch_name"
-            echo "Checking for branch: $branch_name == ${{env.branch_name}}"
-            had_branch=$(git branch -r | grep "${{env.branch_name}}")
+            echo "Checking for branch: $branch_name == ${branch_name}"
+            had_branch=$(git branch -r | grep "${branch_name}")
             echo "had_branch=$had_branch"
             if [[ "$had_branch" == *"$branch_name"* ]]; then
               jq --arg currnent "$branch_name" '.current_branch = $currnent' ${{ env.BRANCH_JSON }} > temp.json
