--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,6 +16,13 @@ on:
 
 
 jobs:
+  first-run:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Print branches
+        run: |
+          echo "branches=${{ github.event.inputs.branches }}"
+
   multiple_branches:
     uses: ./.github/workflows/cache-branch.yml
     permissions:
