--- a/.github/workflows/merge-branch.yml
+++ b/.github/workflows/merge-branch.yml
@@ -44,10 +44,14 @@ jobs:
         id: merge
         continue-on-error: true
         run: |
-          git branch
           branches="${{ inputs.branches }}"
+          branches="main $branches"
+          git fetch origin; git branch
+          git_hash=$(git rev-parse --short HEAD)
           for branch in $branches; do
-            if ! git merge --no-ff origin/$branch; then
+            COMMIT_HASH=$(git rev-parse --short origin/$branch)
+            echo "merging: ${{env.TMP_BRANCH}}($git_hash) merge $branch($COMMIT_HASH)"
+            if ! git merge --allow-unrelated-histories --no-ff origin/$branch -m "auto"; then
               echo "Merge conflict detected when merging branch origin/$branch "
               COMMIT_HASH=$(git rev-parse origin/$branch)
               echo "CONFLICT_BRANCH_HASH=$COMMIT_HASH" >> $GITHUB_ENV
@@ -58,6 +62,8 @@ jobs:
       - name: Push temporary branch
         if: inputs.branches != ''
         run: |
+          echo "err=${{steps.merge.outputs.stderr}}"
+          echo "erp=${{steps.merge.outputs.stdout}}"
           git push -u origin ${{ env.TMP_BRANCH }}
 
       - name: Check for merge conflicts
