--- a/.github/workflows/merge-branch.yml
+++ b/.github/workflows/merge-branch.yml
@@ -51,9 +51,12 @@ jobs:
           for branch in $branches; do
             COMMIT_HASH=$(git rev-parse --short origin/$branch)
             echo "merging: ${{env.TMP_BRANCH}}($git_hash) merge $branch($COMMIT_HASH)"
-            if ! git merge --allow-unrelated-histories --no-ff origin/$branch -m "auto"; then
-              echo "Merge conflict detected when merging branch origin/$branch "
+            MERGE_ERROR=$(git merge --allow-unrelated-histories --no-ff origin/$branch -m "auto" 2>&1)
+            EXIT_CODE=$?
+            echo "err=$MERGE_ERROR and code=$EXIT_CODE"
+            if [ $EXIT_CODE -ne 0 ]; then
               COMMIT_HASH=$(git rev-parse origin/$branch)
+              echo "Error: Merge conflict detected when merging branch=origin/$branch hash=$COMMIT_HASH"
               echo "CONFLICT_BRANCH_HASH=$COMMIT_HASH" >> $GITHUB_ENV
               exit 1
             fi
