--- a/.github/workflows/merge-branch.yml
+++ b/.github/workflows/merge-branch.yml
@@ -51,7 +51,9 @@ jobs:
           for branch in $branches; do
             COMMIT_HASH=$(git rev-parse --short origin/$branch)
             echo "merging: ${{env.TMP_BRANCH}}($git_hash) merge $branch($COMMIT_HASH)"
+            set -x
             MERGE_ERROR=$(git merge --allow-unrelated-histories --no-ff origin/$branch -m "auto" 2>&1)
+            set +x
             echo "msg=$MERGE_ERROR"
             EXIT_CODE=$?
             echo "err=$MERGE_ERROR and code=$EXIT_CODE"
