--- a/.github/workflows/merge-branch.yml
+++ b/.github/workflows/merge-branch.yml
@@ -44,12 +44,13 @@ jobs:
         id: merge
         continue-on-error: true
         run: |
-          branches="main ${{ inputs.branches }}"
+          branches="${{ inputs.branches }}"
+          git merge --allow-unrelated-histories origin/main -m "auto_merge"
           git_hash=$(git rev-parse --short HEAD)
           for branch in $branches; do
             COMMIT_HASH=$(git rev-parse --short origin/$branch)
             echo "merging: ${{env.TMP_BRANCH}}($git_hash) merge $branch($COMMIT_HASH)"
-            if ! git merge --allow-unrelated-histories --no-ff origin/$branch -m auto; then
+            if ! git merge --allow-unrelated-histories --no-ff origin/$branch -m "auto_merge"; then
               COMMIT_HASH=$(git rev-parse origin/$branch)
               echo "Error: Merge conflict detected when merging branch=origin/$branch hash=$COMMIT_HASH"
               echo "CONFLICT_BRANCH_HASH=$COMMIT_HASH" >> $GITHUB_ENV
